libs/@local/hashql/hir/tests/ui/lower/alias-replacement/generic-reassignment.jsonc
//@ run: fail
//@ description: Alias replacement with generics should work
[
  "let",
  "foo",
  "core::math::add<Integer>",
  //~^ ERROR does not accept generic arguments
  [
    "let",
    "bar",
    "foo<Number>",
    //~^ ERROR does not accept generic arguments
    "bar"
  ]
]
